<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RechargeActivity" >

  	  <!-- 标题栏 -->
    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout"
         />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:paddingLeft="20dp"
           >
            <TextView 
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sixteen"
                android:text="@string/recharge_psd"/>
            <EditText 
                android:id="@+id/activity_recharge_psd" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/recharge_psd_edittext"/>
        </LinearLayout>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#33666666"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:paddingLeft="20dp"
           >
            <TextView 
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sixteen"
                android:text="@string/recharge_count"/>
            <EditText 
                android:id="@+id/activity_recharge_count" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/recharge_count_edittext"/>
        </LinearLayout>
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray"/>
        
        <!--  支付 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/id_alipay_psyment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:layout_marginTop="0.5dip"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_launcher" />
                
                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/str_alipay_psyment"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:id="@+id/id_wechat_payment"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:layout_marginTop="0.5dip"
                android:orientation="horizontal" >
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/str_wechat_payment"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
