<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyPsdActivity" >

    <!-- 标题栏 -->
    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout"
         />
    
    <!--  我的积分 -->
    <LinearLayout
        android:id="@+id/activity_mypsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" 
        android:orientation="vertical"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chargevalue"/>
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/invitevalue"/>
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/spendvalue"/>
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/depositvalue"/>
        </LinearLayout>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1dp" 
            android:background="@color/gray"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView 
                android:id="@+id/mypsdchargevalue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chargevalue"/>
            <TextView 
                android:id="@+id/mypsdinvitevalue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/invitevalue"/>
            <TextView 
                android:id="@+id/mypsdspendvalue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/spendvalue"/>
            <TextView 
                android:id="@+id/mypsddepositvalue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/depositvalue"/>
        </LinearLayout>
    </LinearLayout>
    

</LinearLayout>
