<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- 标题栏 -->
    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />
    
    <!-- 上部头像等信息区域 -->
    <RelativeLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/main_bg_headportrait"
        	android:gravity="center"
        	>
        <LinearLayout 
            android:id="@+id/main_headportrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
            >
            <!-- com.zykj.aiguanzhu.custome.CustomImageView -->
        <com.zykj.aiguanzhu.custome.CustomImageView
            android:id="@+id/main_img_headportrait"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/main_icon_headportrait"
            android:scaleType="fitXY"
            />
        </LinearLayout>
        <TextView 
            android:id="@+id/main_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/unlogin_user_name"
            android:layout_below="@id/main_headportrait"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/main_text_name"
             >
            <TextView 
                android:id="@+id/main_txt_total_income"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total_income"
                android:gravity="center"
                android:textColor="@color/white"/>
            <TextView 
                android:id="@+id/main_txt_coupon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/coupon"
                android:gravity="center"
                android:textColor="@color/white"/>
            <TextView 
                android:id="@+id/main_txt_couponcount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/couponcount"
                android:gravity="center"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"/>
    
    <!-- 充值/积分 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout 
            android:id="@+id/activity_main_recharge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/main_bg_rechargeandpsd"
                android:gravity="center"
                android:textColor="@color/black">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_recharge"
                android:layout_gravity="center"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/recharge"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <TextView 
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <LinearLayout 
            android:id="@+id/activity_main_psd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/main_bg_rechargeandpsd"
            android:gravity="center"
            android:textColor="@color/black">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_psd"
                android:layout_gravity="center"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/psd"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray"/>
     
     <GridView 
         android:id="@+id/main_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:stretchMode="columnWidth"
         android:verticalSpacing="30dp"  
    	 android:horizontalSpacing="10dp"  
         android:numColumns="3"
         android:gravity="center"
         android:padding="10dp"
         />

</LinearLayout>
