<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InviteActivity" >

	   <!-- 标题栏 -->
    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout"
         />
    
    <!--  我的邀请 -->
    <LinearLayout 
        android:id="@+id/activity_myinvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_headportrait"
                android:layout_marginTop="20dp"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nickname"/>
        </LinearLayout>
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <LinearLayout 
               android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="5dp">
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_number"
                />
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/invite_totalnumber"/>
            </LinearLayout>
            <TextView 
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray"/>
            <LinearLayout 
               android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="5dp">
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_number"
                />
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/invite_agreenumber"/>
            </LinearLayout>
            <TextView 
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray"/>
            <LinearLayout 
               android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="5dp">
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_number"
                />
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/invite_refusenumber"/>
            </LinearLayout>
        </LinearLayout>
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        
    </LinearLayout>
    <ListView
        android:id="@+id/acitivity_invite_listview" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
