<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartCheckActivity"
    android:background="#EDEDF7"
     >

    <!-- 标题栏 -->

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center">
        <ImageView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/takeout_ic_order_status_success"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/dingdanqueren"
            android:textColor="@color/orange"
            />
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    
    <!--  订单编号 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView 
            android:id="@+id/activity_dingdan_txt_bianhao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#A5A5A5"
            android:text="@string/dingdanbianhao"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <!--  确认时间 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:id="@+id/activity_dingdan_txt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#A5A5A5"
            android:text="@string/dingdantime"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <!--  金额 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView 
            android:id="@+id/activity_dingdan_txt_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#A5A5A5"
            android:text="@string/dingdanmoney"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    

</LinearLayout>
